<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QSCMobile2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_text">你好:) 我是 MOBILE</string>
    <string name="login_uid">输入学号</string>
    <string name="login_pwd">输入教务网密码</string>
    <string name="login_btn">登录</string>
    <string name="copyright_text1">Copyright 2000-2013 浙江大学求是潮工作团队</string>
    <string name="copyright_text2">All Rights Reversed</string>
	<string name="icon_user">&#xf007;</string>
	<string name="icon_circle_blank">&#xf10c;</string>
	<string name="icon_ok_circle">&#xF05d;</string>
	<string name="icon_ok_sign">&#xf058;</string>
	<string name="icon_minus_sign">&#xF056;</string>
	<string name="icon_plus">&#xF067;</string>
	<string name="icon_chevron_right">&#xF054;</string>
	<string name="icon_chevron_left">&#xF053;</string>
	<string name="icon_lock">&#xf023;</string>
    <string name="icon_copy">&#xF0C5;</string>
    <string name="icon_file_alt">&#xF016;</string>
    <string name="icon_exchange">&#xF0EC;</string>
    <string name="icon_info">&#xF129;</string>
    <string name="icon_heart">&#xF004;</string>
    <string name="icon_group">&#xF0C0;</string>
    <string name="icon_calendar">&#xF073;</string>
    <string name="icon_list_alt">&#xF022;</string>
    <string name="icon_trophy">&#xF091;</string>
    <string name="icon_edit">&#xF044;</string>
    <string name="icon_star">&#xF00;</string>
    <string name="title_activity_curriculum">课表么么哒</string>
    
</resources>
